# quant

./: .env.example  .gitignore  .gitmodules  LICENSE  README.md  factor_construct.py  main.py  pyproject.toml
Data/Metadata/: 000852.SH_ins.csv  trade_day.csv
Output/: eval_summary.csv  group_ret.csv  group_stats.csv  ic_series.csv  ls_ret.csv
guide/: .latexmkrc  DUCKDB_GUIDE.md
src/quant_infra/: const.py  factor_analyze.py  factor_calc.py  get_data.py
